# Proyecto-Poo2

./: CMakeLists.txt  Ficha.hpp  Juego.cpp  Juego.hpp  Jugador.cpp  Jugador.hpp  Ludo.cpp  Ludo.hpp  README.md  Recorrido.cpp  Tablero.hpp  funciones.cpp  main.cpp  readme.md
Project_Poo/: CMakeLists.txt  Jugador.cpp  Jugador.h  Tablero.cpp  Tablero.h  casilla.cpp  casilla.h  dado.cpp  dado.h  dibujos.cpp  dibujos.h  ficha.cpp  ficha.h  juego.cpp  juego.h  juego.hpp  main.cpp  recorrido.cpp  recorrido.h
ProyectoPoo2/: CMakeLists.txt  Dado.cpp  Dado.hpp  Ficha.cpp  Ficha.hpp  Juego.cpp  Juego.hpp  Jugador.cpp  Jugador.hpp  Ludo.cpp  Ludo.hpp  Recorrido.cpp  Recorrido.hpp  Tablero.cpp  Tablero.hpp  funciones.cpp  main.cpp
